
== 0.6

	New features:
	-------------
	+ Export of search results to XLS;
	+ Added option to clear and export log files;

	Bugfixes / enhancements:
	------------------------
	+ Fixed broken UTF-8 support;
	+ Fixed wrong logging when authenticating via AD;
	+ Fixed issues where external attacker might get information about internal hosts through resolvedns script;
	+ Fixed wrong subnet nesting under administration/manage subnets;
	+ Fixed editing subnet can be outside of its own root subnet;
	+ Fixed errors when adding new switch auto-adds itselt to all hosts without no switch defined;
	+ Fixed removing switch not removed in ip address list;
	+ Vlan1 can now be used;
	+ Fixed mail sending settings with missing information;
	+ Fixed errors on adding switch with no sections;
	

== 0.5

	New features:
	-------------
	+ Importing subnets from RIPE by AS in admin section;
	+ Added switch management and changed switch logic;
	+ Added VRF support;
	+ Added AD domain authentication;
	+ Added MAC address field to ip address;
	+ Added database table and belonging fields check under admin;

	Bugfixes / enhancements:
	------------------------
	+ Added DNS resolving when editing/adding IP address;
	+ Added IE compatibility meta tag and IE UI improvements for IE >= 8;
	+ Search returns also subnets and MAC searches;
	+ Added mac address and IP status to XLS import/export scripts;
	+ jQuery update from 1.6.2 to 1.7;	
	+ Highcharts update from 2.1.2 to 2.1.8;
	
	+ Fixed dashboard errors if no IPv4/IPv6 subnets configured; 
	+ Fixed errors with viewing / modifying IP addresses for Operator users;
	+ Fixed session cookie error on hosts; 
	+ Fixed error when saving settings;
	+ Fixed instructions errors when inserting html code;
	+ Fixed first free IP address not displaying in IP request;
		

== 0.4

	New features:
	-------------
	+ Massive add / edit / delete by specifying IP range (e.g. 10.10.0.1 - 10.10.0.254);