@@ -1,0 +1,34 @@
+<?php
+
+/**
+ *	Script to replace fields in IP address list
+ ***********************************************/
+
+/* required functions */
+require_once('../../functions/functions.php'); 
+
+/* verify that user is admin */
+checkAdmin();
+
+
+/* verify posts */
+if(empty($_POST['search'])) {
+	die('<div class="error">Please enter something in search field!</div>');
+}
+/* if switch verify that it exists! */
+if($_POST['field'] == "switch") {
+	if(!verifySwitchByName ($_POST['search'])) {
+		die('<div class="error">Switch "<i>'. $_POST['search'] .'</i>" does not exist, first create switch under admin menu!</div>');
+	}
+	if(!verifySwitchByName ($_POST['replace'])) {
+		die('<div class="error">Switch "<i>'. $_POST['replace'] .'</i>" does not exist, first create switch under admin menu!</div>');
+	}
+}
+
+/* set query! */
+$query = 'update `ipaddresses` set `'. $_POST['field'] .'` = replace(`'. $_POST['field'] .'`, "'. $_POST['search'] .'", "'. $_POST['replace'] .'");';
+
+/* update */
+searchAndReplace($query, $_POST);
+
+?>
