@@ -5,6 +5,7 @@
 	-------------
 	+ Export of search results to XLS;
 	+ Added option to clear and export log files;
+	+ Added search and replace function;
 
 	Bugfixes / enhancements:
 	------------------------
